<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/menu_fav" />
        <item
            android:id="@+id/notif_his"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/menu_notif_his" />

        <item
            android:id="@+id/supp_res"
            android:icon="@drawable/ic_assessment_black_24dp"
            android:title="@string/menu_r_s" />
        <item
            android:id="@+id/trade_on"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/menu_trade_on" />
        <item
            android:id="@+id/rate_us"
            android:icon="@drawable/ic_rate_review_black_24dp"
            android:title="@string/menu_rate_us" />
        <item
            android:id="@+id/contact_us"
            android:icon="@drawable/ic_call_black_24dp"
            android:title="@string/menu_contact_us" />
    </group>
        </menu>
